--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -14,8 +14,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="购物车"
             android:textSize="18.0sp" />
+
+        <TextView
+            android:id="@+id/goods_cart_txv_sandian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5.0dip"
+            android:layout_marginRight="10.0dip"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/goods_cart_linearlayout_del"
@@ -76,17 +85,16 @@
                 android:paddingLeft="10.0dip"
                 android:paddingRight="5.0dip">
 
-                <ImageView
+                <TextView
                     android:id="@+id/goods_cart_txv_button_select"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="3.0dip"
-                    android:text="全选" />
+                    android:text="all_selected" />
             </LinearLayout>
 
             <LinearLayout
@@ -123,10 +131,9 @@
                     android:layout_height="32.0dip"
                     android:layout_marginLeft="12.0dip"
                     android:layout_marginRight="12.0dip"
-                    android:background="@android:color/holo_red_light"
                     android:paddingLeft="20.0dip"
                     android:paddingRight="20.0dip"
-                    android:text="去结算"
+                    android:text="settlement"
                     android:textColor="@android:color/white"
                     android:textSize="15.0sp" />
             </LinearLayout>
