--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -42,7 +42,7 @@
 
     <LinearLayout
         android:id="@+id/goods_cart_linearlay_hasdata"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
@@ -56,6 +56,40 @@
             android:divider="#BFBFBF"
             android:dividerHeight="5.0dip" />
 
+        <LinearLayout
+            android:id="@+id/goods_cart_linearlayout_no_data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="20.0dip"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/no_shoping" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3.0dip"
+                android:text="您的购物车还是空的"
+                android:textSize="12.0sp" />
+
+            <TextView
+                android:id="@+id/goods_cart_txv_gotoshopping"
+                android:layout_width="110.0dip"
+                android:layout_height="wrap_content"
+                android:layout_margin="5.0dip"
+                android:background="@android:color/holo_red_light"
+                android:gravity="center"
+                android:padding="8.0dip"
+                android:text="我去逛逛"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="1.0dip"
@@ -64,6 +98,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="52.0dip"
+            android:layout_gravity="bottom"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -138,7 +173,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -152,35 +188,5 @@
             android:text="轻触屏幕重试" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/goods_cart_linearlayout_no_data"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="20.0dip"
-        android:gravity="center"
-        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/no_shoping" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3.0dip"
-            android:text="您的购物车还是空的"
-            android:textSize="12.0sp" />
-
-        <TextView
-            android:id="@+id/goods_cart_txv_gotoshopping"
-            android:layout_width="110.0dip"
-            android:layout_height="wrap_content"
-            android:layout_margin="5.0dip"
-            android:gravity="center"
-            android:padding="8.0dip"
-            android:text="我去逛逛"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
 </LinearLayout>
